* Kurse haben zusätzliches Text Feld 'Aufnahmebedingungen'.
* Möglichkeit, bei einer PDF Kursanmeldung eine Unterschrift einzufordern. 
* Nicht erfüllte Aufnahmebedingungen werden bei einer Teilnahme angezeigt. Eine Anmeldung ist trotzdem möglich.
* Beim Hinzufügen zur Kurs Warteliste kann neu ein Kommentar eingegeben werden.
* Möglichkeit, Personen aufgrund ihrer Qualifikationen zu filtern.

== Version 1.8

* Möglichkeit, den Zugriff auf Anlässe und Kurse unterschiedlich zu berechtigen.

== Version 1.7

* Möglichkeit beliebige Absender auf Mailinglisten zuzulassen.
* Unterstützung von internationalen Postleitzahlen.
* Echtzeitvalidierung der Von-/Bis-Daten bei Anlässen.
* Hinweis mit Details über die Aktion bei 'Login verschicken'.

== Version 1.6

* Anzeige der Anzahl gefundenen und nicht sichtbaren Personen auf Personenlisten.
* Anzeige von beliebigen Informationen beim Login Formular.
* Beschränkung der Gruppen / Rollen bei Abos auf Gruppe und Untergruppen.

== Version 1.5

* Rollen in Anlässen können geändert werden.
* CSV Import erkennt Auswahlwerte in der aktuellen Sprache (z.B. ja/nein anstelle 1/0).
* Möglichkeit, beim CSV Import Werte in der Datenbank zu ändern.
* CSV Export für Gruppenanlässe und Kurse.
* Verschiedene Bug Fixes und Stabilitätsverbesserungen.

== Version 1.4

* Möglichkeit für Beziehungen zwischen Personen.
* Neue Grundberechtigungen nur für die aktuelle Ebene.

== Version 1.3

* Mehrsprachigkeit.
* Rollenauswahl erfolgt nun auf dem Formular, nicht mehr im Dropdown.
* Gruppenauswahl der jeweiligen Ebene beim Erstellen von Rollen.
* Direktes Ändern von Rollen auf Personenlisten.
* CSV Export aller Untergruppen einer Gruppe.
* Logging aller Änderungen von Personenattributen.
* Weitere E-Mail Adressen (analog Telefonnummern) bei Personen und Gruppen.
* Prominente Gruppennavigation.
* Anzeige von Gruppe und Ebene bei Rollen.
* JSON API für Gruppen und Personen.
* Sortierbare Personen und Teilnehmer Listen.